cabal-version:   2.4
name:            aoc2023
license-file:    LICENSE
version:         0.1.0.0
author:          Rock Boynton
maintainer:      Rock Boynton <rboynton@anduril.com>
copyright:       2023 Rock Boynton
synopsis:        Solutions to Advent of Code 2023
extra-doc-files:
  README.md

common common-options
  build-depends:    base >=4.9 && <5
                  , containers
                  , bytestring
                  , stringsearch
                  , QuickCheck
                  , vector
                  , text
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

executable day1
  import:         common-options
  hs-source-dirs: solutions
  main-is:        Day1.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

executable day2
  import:         common-options
  hs-source-dirs: solutions
  main-is:        Day2.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

executable day3
  import:         common-options
  hs-source-dirs: solutions
  main-is:        Day3.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

executable day4
  import:         common-options
  hs-source-dirs: solutions
  main-is:        Day4.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
